# ChangeLog for sys-auth/pambase
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.139 2014/05/08 22:37:12 vapier Exp $

  08 May 2014; Mike Frysinger <vapier@gentoo.org> pambase-20140313.ebuild:
  Drop old elog message as it applies to versions more than 5 years old #440582
  by poletti.marco.

  13 Mar 2014; Samuli Suominen <ssuominen@gentoo.org>
  -pambase-20120417-r1.ebuild, -pambase-20120417-r2.ebuild,
  -pambase-20120417.ebuild:
  old

*pambase-20140313 (13 Mar 2014)

  13 Mar 2014; Samuli Suominen <ssuominen@gentoo.org> +pambase-20140313.ebuild:
  Version bump (imported -systemd.patch, -systemd-auth.patch and -lastlog-
  silent.patch)

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> pambase-20120417-r3.ebuild:
  Add arm64 love.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> pambase-20120417-r1.ebuild,
  pambase-20120417-r3.ebuild, pambase-20120417.ebuild:
  Mark m68k/s390/sh stable.

  14 Jan 2014; Pacho Ramos <pacho@gentoo.org> pambase-20120417-r3.ebuild:
  ia64 stable, bug #491034 (thanks to Emeric Maschino for testing)

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pambase-20120417-r3.ebuild:
  Stable for sparc, wrt bug #491034

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pambase-20120417-r3.ebuild:
  Stable for ppc, wrt bug #491034

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pambase-20120417-r3.ebuild:
  Stable for ppc64, wrt bug #491034

  30 Nov 2013; Markus Meier <maekke@gentoo.org> pambase-20120417-r3.ebuild:
  arm stable, bug #491034

  17 Nov 2013; Matt Turner <mattst88@gentoo.org> pambase-20120417-r3.ebuild:
  alpha stable, bug 491034.

  16 Nov 2013; Pacho Ramos <pacho@gentoo.org> pambase-20120417-r3.ebuild:
  amd64/x86 stable, bug #491034

  12 Nov 2013; Jeroen Roovers <jer@gentoo.org> pambase-20120417-r3.ebuild:
  Stable for HPPA (bug #491034).

*pambase-20120417-r3 (27 Oct 2013)

  27 Oct 2013; Pacho Ramos <pacho@gentoo.org>