@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile install postinst test
+DEPEND=app-portage/portage-utils app-arch/xz-utils
+DESCRIPTION=PAM base configuration files
+EAPI=5
+HOMEPAGE=http://www.gentoo.org/proj/en/base/pam/
+IUSE=consolekit cracklib debug gnome-keyring minimal mktemp +nullok pam_krb5 pam_ssh passwdqc securetty selinux +sha512 systemd
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 -sparc-fbsd -x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux
+LICENSE=GPL-2
+RDEPEND=|| ( >=sys-libs/pam-1.1.3 ( sys-auth/openpam || ( sys-freebsd/freebsd-pam-modules sys-netbsd/netbsd-pam-modules ) ) ) consolekit? ( >=sys-auth/consolekit-0.4.6[pam] ) cracklib? ( sys-libs/pam[cracklib] ) gnome-keyring? ( >=gnome-base/gnome-keyring-2.32[pam] ) mktemp? ( sys-auth/pam_mktemp ) pam_krb5? ( || ( >=sys-libs/pam-1.1.3 sys-auth/openpam ) >=sys-auth/pam_krb5-4.3 ) pam_ssh? ( sys-auth/pam_ssh ) passwdqc? ( >=sys-auth/pam_passwdqc-1.0.4 ) selinux? ( sys-libs/pam[selinux] ) sha512? ( >=sys-libs/pam-1.1.3 ) systemd? ( >=sys-apps/systemd-204[pam] ) !<sys-apps/shadow-4.1.5-r1 !<sys-freebsd/freebsd-pam-modules-6.2-r1 !<sys-libs/pam-0.99.9.0-r1
+RESTRICT=binchecks
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~vapier/pambase-20150213.tar.xz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=6bc8ce0e084900bb0968cbc2c2e5d85d
