@@ -1,6 +1,13 @@
 # ChangeLog for sys-auth/pambase
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.139 2014/05/08 22:37:12 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.140 2015/02/14 05:02:12 vapier Exp $
+
+*pambase-20150213 (14 Feb 2015)
+
+  14 Feb 2015; Mike Frysinger <vapier@gentoo.org> +pambase-20150213.ebuild,
+  metadata.xml:
+  Move pam_gnome_keyring after pam_selinux #511600 by Jason Zaman. Add
+  USE=securetty and USE=nullok options #539508.
 
   08 May 2014; Mike Frysinger <vapier@gentoo.org> pambase-20140313.ebuild:
   Drop old elog message as it applies to versions more than 5 years old #440582
